--- a/admin/package.json
+++ b/admin/package.json
@@ -8,15 +8,18 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-module-decorators": "^0.17.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-typescript": "~4.4.0",
