--- a/admin-next/package.json
+++ b/admin-next/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0-beta.1",
+    "vue": "^3.0.0-beta.15",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
-    "vue-router": "^4.0.0-alpha.6",
-    "vuex": "^4.0.0-alpha.1"
+    "vue-router": "^4.0.0-alpha.12",
+    "vuex": "^4.0.0-beta.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
