--- a/admin-next/package.json
+++ b/admin-next/package.json
@@ -7,7 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "core-js": "^3.6.5",
+    "graphql": "^15.1.0",
+    "graphql-tag": "^2.10.3",
     "vue": "^3.0.0-beta.15",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
